BUG-DFC-13123 Exam results helpline | On mobile view, Warning Icon vertically positioned top
Updated 4 toolkits modified style to reposition warning icon

1. gds_tookit
2. gds_service_toolkit
3. gds_service_toolkit_BAU
4. nationalcareers_toolkit

--- a/src/gds_service_toolkit/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_service_toolkit/assets/src/frontend/sass/includes/_custom.scss
@@ -24,7 +24,8 @@
           float: left;
         }
         .govuk-warning-text__icon {
-          top:55%;
+          top:45%;
+          margin-top:0;
         }
       }
     }
