--- a/src/gds_service_toolkit_BAU/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_service_toolkit_BAU/assets/src/frontend/sass/includes/_custom.scss
@@ -515,7 +515,8 @@ $mobile: 768px;
           user-select: none;
 
           @media (max-width: 48.0525em) {
-                top: 55%;
+                top: 45%;
+                margin-top: 0;
           }
       }
 
